--- a/src/App.css
+++ b/src/App.css
@@ -102,12 +102,12 @@ button:hover {
 }
 .remote-participants {
   display: flex;
-  flex-wrap: nowrap;
   justify-content: space-between;
   padding: 0 2em 2em;
-  width: 1280px;
-  height: 720px;
+  width: 640px;
+  height: 360px;
 }
+
 .wfFriends {
   display: flex;
   flex-wrap: nowrap;
@@ -115,13 +115,13 @@ button:hover {
   padding: 0 2em 2em;
 }
 
-.participant {
-  background: #333e5a;
+/* .participant {
+  /* background: #333e5a;
   padding: 10px;
   border-radius: 6px;
   display: inline-block;
-  margin-right: 10px;
-}
+  margin-right: 10px; 
+} */
 .participant:last-child {
   margin-right: 0;
 }
@@ -131,9 +131,18 @@ button:hover {
   color: #fff;
 }
 
+/* .canvas {
+  /* width:720px;
+  height:540px;
+} */
+
 video {
-  width: 100%;
-  max-width: 600px;
+  /* width: 100vw;
+  height: 100vh; */
+  width:720px;
+  height:540px;
+  /* max-width: 640px;
+  max-height: 360px; */
   display: block;
   margin: 0 auto;
   border-radius: 6px;
