--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,8 @@ form > div > input {
   border: 1px solid #333e5a;
 }
 
+
+
 button {
   background: #333e5a;
   color: #fff;
@@ -100,6 +102,7 @@ button:hover {
   text-align: center;
   margin-bottom: 2em;
 }
+
 .remote-participants {
   display: flex;
   justify-content: space-between;
@@ -115,6 +118,27 @@ button:hover {
   padding: 0 2em 2em;
 }
 
+
+.fullscreen-enabled .overlayBOX {
+  background: green;
+}
+
+
+.fullscreen-enabled .overlayBOX {
+  width:"100%";
+  height:"100%";
+}
+
+.fullscreen-enabled video {
+  width:"100%" ;
+  height:"100%" ;
+}
+
+.fullscreen-enabled canvas {
+  width:"100%" ;
+  height:"100%" ;
+}
+
 /* .participant {
   /* background: #333e5a;
   padding: 10px;
@@ -122,25 +146,33 @@ button:hover {
   display: inline-block;
   margin-right: 10px; 
 } */
-.participant:last-child {
+/* .participant:last-child {
   margin-right: 0;
 }
 .participant h3 {
   text-align: center;
   padding-bottom: 0.5em;
   color: #fff;
+} */
+
+.overlayBOX {
+  top: 0px;
+  left: 0px;
+  height: 800px;
+  width: 800px;
+  background-color: #f0293e;
 }
 
-/* .canvas {
-  /* width:720px;
-  height:540px;
-} */
+canvas {
+  width: 1280px;
+  height: 960px;
+}
 
 video {
   /* width: 100vw;
   height: 100vh; */
-  width:720px;
-  height:540px;
+  width:1280px;
+  height:960px;
   /* max-width: 640px;
   max-height: 360px; */
   display: block;
