--- a/src/Pages/LandingPage.css
+++ b/src/Pages/LandingPage.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: black;
+    /* background-color: black; */
+    /* background-color: white;  */
     /* text-align: center */
   }
 
