--- a/src/App.css
+++ b/src/App.css
@@ -145,18 +145,21 @@ button:hover {
 
 
 .fullscreen-enabled .overlayBOX {
-  width:"100%";
-  height:"100%";
+  width:100vw;
+  height:100vh;
 }
 
 .fullscreen-enabled video {
-  width:"100%" ;
-  height:"100%" ;
+  width:100vw ;
+  height:100vh;
+  object-fit: cover
 }
 
 .fullscreen-enabled canvas {
-  width:"100%" ;
-  height:"100%" ;
+  width:100vw ;
+  height:100vh ;
+  z-index: 2147483647
+
 }
 
 /* .participant {
